[metadata]
name = robotframework-base64Library
version = attr: base64Library.__version__
author = Frederico Cunha
author_email = cunha.frederico@gmail.com
description = Robot Framework library for Base64 file operations with large file support
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cunhafrederico/robotframework-base64Library
project_urls =
    Bug Tracker = https://github.com/yourusername/robotframework-base64Library/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
    Framework :: Robot Framework
    Framework :: Robot Framework :: Library

[options]
package_dir =
    = base64file
packages = find:
python_requires = >=3.7
install_requires =
    robotframework>=3.2

[options.packages.find]
where = base64file